# robot_to_server

./: Dockerfile  README.md  python_socket_server.py
ros_transmitter/: CMakeLists.txt  package.xml
ros_transmitter/include/ros_transmitter/: ros_transmitter.h  socket_client.h
ros_transmitter/launch/: ros_transmitter.launch
ros_transmitter/msg/: INSPVAX.msg
ros_transmitter/src/: main.cpp  ros_transmitter.cpp  socket_client.cpp
